# bulk-prusa-slicing

./: .gitignore  README.md  launch-multiple-bulkslicer.py  setup.cfg
src/bulkslicer/: cli.py
