[metadata]
name = bulkslicer
author = JeremyLP Hackhim
author_email = jeremyleprunenec.pro@gmail.com
description = bulkslicer: simple tool for slicing multiple stls using a .ini file
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hackhim/bulkslicer

[options]
package_dir =
	= src
packages = bulkslicer
python_requires = >=3.7
install_requires =
	click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
	bulkslicer=bulkslicer.cli:main